# scatola

./: AUTHORS  COPYING  COPYING.EXTENSIONS  COPYING.LIB  HACKING  Makefile.am  NEWS  README  autogen.sh  configure.ac
.tx/: config
cut-n-paste-code/: README
data/: Makefile.am  browser.xml  org.gde2.freedesktop.FileManager1.service.in  scatola-autorun-software.desktop.in.in  scatola-browser.desktop.in.in  scatola-computer.desktop.in.in  scatola-desktop-3.14.css  scatola-desktop.css  scatola-extras.placeholder  scatola-file-management-properties.desktop.in.in  scatola-folder-handler.desktop.in.in  scatola-home.desktop.in.in  scatola-suggested.placeholder  scatola.appdata.xml.in  scatola.css  scatola.desktop.in.in  scatola.xml.in
data/icons/: Makefile.am
data/patterns/: Makefile.am
docs/: Makefile.am  architecture.txt  dnd.txt  key_mouse_navigation.txt  recommended-books.html  scatola-autorun-software.1  scatola-connect-server.1  scatola-file-management-properties.1  scatola-internals.sxw  scatola-io.txt  scatola.1  scatola.faq  smoketests.html  state-machines.txt  style-guide.html
docs/reference/: Makefile.am
docs/reference/libscatola-extension/: Makefile.am  libscatola-extension-docs.xml  libscatola-extension-sections.txt  libscatola-extension.types  version.xml.in
eel/: Makefile.am  check-program.c  eel-accessibility.c  eel-art-extensions.c  eel-art-extensions.h  eel-art-gtk-extensions.c  eel-art-gtk-extensions.h  eel-background-box.c  eel-background-box.h  eel-background.c  eel-background.h  eel-canvas-rect-ellipse.c  eel-canvas-rect-ellipse.h  eel-canvas.c  eel-canvas.h  eel-debug.h  eel-editable-label.c  eel-gde2-extensions.c  eel-gde2-extensions.h  eel-gdk-extensions.c  eel-gdk-extensions.h  eel-gdk-pixbuf-extensions.c  eel-gdk-pixbuf-extensions.h  eel-glib-extensions.c  eel-glib-extensions.h  eel-gtk-container.c  eel-gtk-container.h  eel-gtk-extensions.c  eel-gtk-extensions.h  eel-image-table.c  eel-image-table.h  eel-labeled-image.c  eel-labeled-image.h  eel-stock-dialogs.c  eel-stock-dialogs.h  eel-string.c  eel-string.h  eel-vfs-extensions.c  eel-vfs-extensions.h  eel-wrap-table.c  (+4 more)
icons/: Makefile.am
libscatola-extension/: Makefile.am  libscatola-extension-uninstalled.pc.in  libscatola-extension.pc.in  scatola-column-provider.c  scatola-column-provider.h  scatola-column.c  scatola-column.h  scatola-extension-i18n.h  scatola-extension-private.h  scatola-extension-types.c  scatola-extension-types.h  scatola-file-info.c  scatola-file-info.h  scatola-info-provider.c  scatola-info-provider.h  scatola-location-widget-provider.c  scatola-location-widget-provider.h  scatola-menu-item.c  scatola-menu-item.h  scatola-menu-provider.c  scatola-menu-provider.h  scatola-menu.c  scatola-menu.h  scatola-property-page-provider.c  scatola-property-page-provider.h  scatola-property-page.c  scatola-property-page.h
libscatola-private/: Makefile.am  README  org.gde2.media-handling.gschema.xml  org.gde2.scatola.gschema.xml  scatola-autorun.c  scatola-autorun.h  scatola-bookmark.c  scatola-bookmark.h  scatola-cell-renderer-text-ellipsized.c  scatola-cell-renderer-text-ellipsized.h  scatola-clipboard-monitor.c  scatola-clipboard-monitor.h  scatola-clipboard.c  scatola-clipboard.h  scatola-column-chooser.c  scatola-column-chooser.h  scatola-column-utilities.c  scatola-column-utilities.h  scatola-customization-data.c  scatola-customization-data.h  scatola-debug-log.c  scatola-debug-log.h  scatola-default-file-icon.c  scatola-default-file-icon.h  scatola-desktop-directory-file.c  scatola-desktop-directory-file.h  scatola-desktop-directory.c  scatola-desktop-directory.h  scatola-desktop-icon-file.c  scatola-desktop-icon-file.h  scatola-desktop-link-monitor.c  scatola-desktop-link-monitor.h  scatola-desktop-link.c  scatola-desktop-link.h  scatola-desktop-metadata.c  scatola-desktop-metadata.h  scatola-directory-async.c  scatola-directory-background.c  scatola-directory-background.h  scatola-directory-notify.h  (+107 more)
po/: POTFILES.in  POTFILES.skip  af.po  am.po  ar.po  as.po  ast.po  az.po  be.po  bg.po  bn.po  bn_IN.po  br.po  bs.po  ca.po  ca@valencia.po  cmn.po  crh.po  cs.po  cy.po  da.po  de.po  dz.po  el.po  en_AU.po  en_CA.po  en_GB.po  eo.po  (+88 more)
src/: Makefile.am  check-scatola  gde2-network-scheme.desktop.in  scatola-actions.h  scatola-application.c  scatola-application.h  scatola-autorun-software.c  scatola-bookmark-list.c  scatola-bookmark-list.h  scatola-bookmarks-window.c  scatola-bookmarks-window.h  scatola-connect-server-dialog-main.c  scatola-connect-server-dialog-nonmain.c  scatola-connect-server-dialog.c  scatola-connect-server-dialog.h  scatola-connect-server-operation.c  scatola-connect-server-operation.h  scatola-convert-metadata.c  scatola-desktop-window.c  scatola-desktop-window.h  scatola-emblem-sidebar.c  scatola-emblem-sidebar.h  scatola-file-management-properties-main.c  scatola-file-management-properties.c  scatola-file-management-properties.h  scatola-freedesktop-dbus.c  scatola-freedesktop-dbus.h  scatola-history-sidebar.c  scatola-history-sidebar.h  scatola-image-properties-page.c  scatola-image-properties-page.h  scatola-information-panel.c  scatola-information-panel.h  scatola-location-bar.c  scatola-location-bar.h  scatola-location-dialog.c  scatola-location-dialog.h  scatola-location-entry.c  scatola-location-entry.h  scatola-main.c  (+56 more)
src/file-manager/: Makefile.am  fm-desktop-icon-view.c  fm-desktop-icon-view.h  fm-directory-view.c  fm-directory-view.h  fm-ditem-page.c  fm-ditem-page.h  fm-empty-view.c  fm-empty-view.h  fm-error-reporting.c  fm-error-reporting.h  fm-icon-container.c  fm-icon-container.h  fm-icon-view.c  fm-icon-view.h  fm-list-model.c  fm-list-model.h  fm-list-view-private.h  fm-list-view.c  fm-list-view.h  fm-properties-window.c  fm-properties-window.h  fm-tree-model.c  fm-tree-model.h  fm-tree-view.c  scatola-audio-mime-types.h
test/: Makefile.am  test-copy.c  test-eel-background.c  test-eel-image-table.c  test-eel-labeled-image.c  test-scatola-directory-async.c  test-scatola-search-engine.c  test-scatola-wrap-table.c  test.c  test.h
(+3 files in other folders)
