NULL = 

SUBDIRS = reference

man_MANS = \
	scatola.1 \
	scatola-autorun-software.1 \
	scatola-connect-server.1 \
	scatola-file-management-properties.1 \
	$(NULL)

EXTRA_DIST = \
	$(man_MANS) \
	architecture.txt \
	dnd.txt \
	load-states.dia \
	scatola-internals.sxw \
	scatola-internals.pdf \
	scatola-io.txt \
	scatola.faq \
	recommended-books.html \
	smoketests.html \
	state-machines.txt \
	style-guide.html \
	key_mouse_navigation.txt \
	$(NULL)
